[package]
name = "naturalquerylib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.43.0", features = [ "full" ] }
erased-serde = "0.4.5"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
