[package]
name = "naturalquerylib"
version = "0.1.0"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
description = "A Rust SQL query builder with async support."
homepage = "https://github.com/stescobedo92/naturalquerylib"
repository = "https://github.com/stescobedo92/naturalquerylib"
license = "MIT"
keywords = ["sql", "query-builder", "async"]
categories = ["database", "web-programming"]
edition = "2021"

[dependencies]
async-trait = "0.1.85"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls","sqlite", "macros","json","runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.43.0", features = [ "full" ] }
erased-serde = "0.4.5"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }